# DCF_Engine

./: .gitignore  DCF_template.xltm  Makefile  README.md  __init__.py  dcf_initialiser.py  pyproject.toml  setup.py  ~$DCF_template.xltm
DCF_Engine/: dcf_initialiser.py  requirements.txt  setup.py  test.py
DCF_Engine/Excel_Engine_Old/: MANIFEST.in
DCF_Engine/Excel_Engine_Old/tests/: test_excel_code.py
DCF_Engine/database_query/: __init__.py
DCF_Engine/fmpsdk_query/: fmpsdk_query.py  requirements.txt  setup.py
DCF_Engine/gpt_query/: setup.py  test.py
DCF_Engine/wrds_query/: requirements.txt  setup.py
DCF_Engine/yfinance_query/: setup.py  yfinance_query.py
DCFs_folder/: DCF_AAPL_2025.xls  DCF_BA_2025.xls  DCF_NOC_2025.xls  DCF_NVDA_2025.xls
Excel_Engine_Old/: setup.py
code/: dcf_initialiser.py
code/Excel_Engine_Old/: __init__.py  excel_code.py
code/Excel_Engine_Old/tests/: Test_workbook.xlsx
code/database_query/: database_query.py  setup.py
code/fmpsdk_query/: __init__.py  fmpsdk_query.py
code/gpt_query/: gpt_query.py
code/wrds_query/: wrds_query.py
code/wrds_query/tests/: test_wrds.py
code/yfinance_query/: yfinance_query.py
database_query/: database_query.py
fmpsdk_query/: fmpsdk_query.py
gpt_query/: __init__.py  env_setup.py
resources/: DCF_template.xltm
wrds_query/: __init__.py
yfinance_query/: __init__.py  yfinance_query.py
